# pycalphad

./: .binstar.yml  .coveragerc  .gitattributes  .gitignore  .travis.yml  CHANGES.rst  CMakeLists.txt  INSTALLING.rst  KNOWN_BUGS.txt  LICENSE.txt  MANIFEST.in  ONBOARDING.rst  README.md  README.rst  README.txt  RELEASING.rst  UEM_IMPLEMENTATION_SUMMARY.md  appveyor.yml  asv.conf.json  boxes.html  conda.yaml  cymem.LICENSE  develop.py  environment-dev.yml  environment-test.yml  environment.yml  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tdbread.sln  test_uem_validation.py  uem_pycalphad.py  versioneer.py
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
MQMQA-examples/: EXAMPLE to make database from DAT file to TDB.ipynb  Example_for_Max.ipynb  Example_for_Max_Surface_energy  FLINAK_NIF2_TEST.tdb  LiCl-NaCl-UCl4_penn.dat:Zone.Identifier  Mn-Si-Ge.tdb  Na-Li-U-Cl.tdb  NaCl-AlCl3.dat:Zone.Identifier  NaF-CrF3.tdb  South Carolina Uni.ipynb  TEST.TDB  Testing shift_reference_energy.ipynb  Testing_all_databases.ipynb  Testing_ternary_parameters.ipynb  Updated_Mn5G3_species_Mn-Ge-Si.tdb
benchmarks/: benchmarks.py
calphad/: minimize.py  model.py  variables.py
calphad/io/libtdb/: CMakeLists.txt
calphad/io/libtdb/include/: database.hpp  database_tdb.hpp
calphad/io/libtdb/source/: database_tdb.cpp  logging.cpp  python.cpp
calphad/io/libtdb/source/grammars/: function_grammar.cpp
calphad/io/libtdb/source/parsers/: database_info.cpp  species.cpp
calphad/io/libtdb/source/utils/: chemical_formula.cpp
ci/: Dockerfile.base  Dockerfile.demo  deploy.sh  deploy_key.enc  install_python.ps1  travis_legacy_deps.sh  with-compiler.cmd
cmake/: FindQhull.cmake  PCHSupport.cmake
conda_recipe/: conda.yaml  meta.yaml
docs/: .gitignore  INSTALLING.rst  README.rst  TESTING_UEM.md  UEM_IMPLEMENTATION.md  UEM_QUICK_REFERENCE.md  conf.py  faq.rst  index.rst  onboarding.rst  requirements.txt
examples/: 3DTest.ipynb  7-3-2014_ALCOCR.TDB  AdaptiveTest.ipynb  Al-Cu-Y.tdb  AlFeTest.ipynb  (+62 more)
libgibbs/: CMakeLists.txt  libgibbs.vcxproj  libgibbs.vcxproj.filters
libgibbs/include/: compositionset.hpp  conditions.hpp  constraint.hpp  equilibrium.hpp  equilibrium_fwd.hpp  evaluate.hpp  libgibbs_pch.hpp  mesh.hpp  models.hpp
libgibbs/include/optimizer/: ast_set.hpp  equilibriumresult.hpp  global_minimization.hpp  halton.hpp  opt_Gibbs.hpp  optimizer.hpp  phasestatus.hpp
libgibbs/include/optimizer/utils/: build_variable_map.hpp  convex_hull.hpp  ezd_minimization.hpp  hull_mapping.hpp  ndgrid.hpp  ndsimplex.hpp  simplicial_facet.hpp
libgibbs/include/optimizer/utils/geometry/: convex_hull.hpp  dynamic_access.hpp  dynamic_box.hpp  dynamic_point.hpp  dynamic_rtree.hpp  orientation.hpp
libgibbs/include/utils/: ast_caching.hpp  ast_map_rename.hpp  ast_variable_rename.hpp  build_variable_map.hpp  cholesky.hpp  determinant.hpp  invert_matrix.hpp  math_expr.hpp  primes.hpp  site_fraction_convert.hpp
libgibbs/source/: build_variable_map.cpp  libgibbs_pch.cpp  pygibbs.cxx
libgibbs/source/mesh/: naive_mesh.cpp
libgibbs/source/models/: core_helpers.cpp  excess_redlichkister.cpp  excess_ternary_muggianu.cpp  gibbs_ref.cpp  ideal_mixing.cpp  magnetic_ihj.cpp  model_class.cpp  model_clone_rename.cpp
libgibbs/source/optimizer/: compositionset.cpp  constraint.cpp  constraintmanager.cpp  equilibrium.cpp  equilibriumfactory.cpp  equilibriumresult.cpp  evaluate.cpp  global_minimization.cpp  opt_Gibbs.cpp  opt_Gibbs_ctor.cpp
libgibbs/source/optimizer/constraints/: massbalanceconstraint.cpp  phasefractionbalanceconstraint.cpp  sublatticebalanceconstraint.cpp  trivialconstraint.cpp
libgibbs/source/optimizer/utils/: convex_hull.cpp  convex_hull_global.cpp  ezd_minimization.cpp  find_critical_points.cpp  get_Gibbs_deriv.cpp  halton.cpp  hessian_approx.cpp  hull_mapping.cpp  opt_helpers.cpp  startingpoint_naive.cpp
libgibbs/source/utils/: ast_variable_rename.cpp  derivative.cpp  math_expr.cpp  static_init.cpp
libtdb/: CMakeLists.txt  libtdb.vcxproj  libtdb.vcxproj.filters  stdafx.h
libtdb/include/: conditions.hpp  database.hpp  database_tdb.hpp  exceptions.hpp  libtdb_pch.hpp  logging.hpp  structure.hpp
libtdb/include/grammars/: function_grammar.hpp  math_grammar.hpp  param_grammar.hpp
libtdb/include/utils/: chemical_formula.hpp  math_expr.hpp  periodic_table.hpp
libtdb/source/: database_tdb.cpp  libtdb_pch.cpp  logging.cpp  parser.cpp  python_ext.cxx
libtdb/source/grammars/: function_grammar.cpp  math_grammar.cpp  param_grammar.cpp
libtdb/source/parsers/: constituent.cpp  database_info.cpp  element.cpp  function.cpp  parameter.cpp  phase.cpp  species.cpp  type_definition.cpp
libtdb/source/utils/: chemical_formula.cpp  derivative.cpp  math_expr.cpp  periodic_table.cpp  static_init.cpp
tdbread/: CMakeLists.txt  chemical_formula.cpp  conditions.h  constituent.cpp  database.h  database_info.cpp  database_tdb.cpp  database_tdb.h  element.cpp  evaluate.cpp  exceptions.h  function.cpp  function_grammar.cpp  function_grammar.h  hessian.cpp  math_expr.cpp  math_expr.h  math_grammar.cpp  math_grammar.h  opt_Gibbs.cpp  opt_Gibbs.h  opt_helpers.cpp  opt_init_vars.cpp  optimizer.h  param_grammar.cpp  param_grammar.h  parameter.cpp  parser.cpp  periodic_table.cpp  phase.cpp  species.cpp  stdafx.cpp  stdafx.h  structure.h  tdbread.cpp  tdbread.vcxproj  tdbread.vcxproj.filters  update_gradient.cpp  warning_disable.h
tdbread/coin/: IpAlgTypes.hpp  IpCachedResults.hpp  IpIpoptApplication.hpp  IpIpoptNLP.hpp  IpIteratesVector.hpp  IpJournalist.hpp  IpMatrix.hpp  IpNLP.hpp  IpOptionsList.hpp  IpTNLP.hpp  IpTaggedObject.hpp  IpUtils.hpp  IpVector.hpp
tdbread/source/: tdbread.cpp
test/: CMakeLists.txt  math_test.cpp  test.cpp  test.vcxproj  test.vcxproj.filters  test_pch.cpp  test_pch.h
test/include/: test_pch.hpp
test/include/fixtures/: fixture_eq.hpp  fixture_func.hpp  fixture_math.hpp
test/source/: test.cpp  test_pch.cpp
test/source/optimizer/: opt_test.cpp
test/source/parsers/: func_test.cpp  math_test.cpp
(+1278 files in other folders)
