[build-system]
requires = [
    "Cython",
    # numpy ABI compatibility for different Python versions
    "oldest-supported-numpy; python_version=='3.8'",
    "numpy>=2; python_version>='3.9'",
    "scipy",
    "setuptools",
    "setuptools_scm[toml]>=6.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
markers = [
    "solver: mark for tests that verify the correctness of the solver",
]
norecursedirs = ["pycalphad/_dev"]

[tool.coverage.paths]
# The first path is the path to the modules to report coverage against.
# All following paths are patterns to match against the collected data.
# Any matches will be combined with the first path for coverage.
source = [
    "./pycalphad",
    "*/lib/*/site-packages/pycalphad",  # allows testing against site-packages for a local virtual environment
]

[tool.coverage.run]
plugins = [
    "Cython.Coverage",
]
# Only consider coverage for these packages:
source_pkgs = [
    "pycalphad"
]
omit = [
    "pycalphad/core/*.pxd", # workaround for https://github.com/nedbat/coveragepy/issues/972
    "stringsource",
]

[tool.coverage.report]
ignore_errors = true # workaround for https://github.com/cython/cython/issues/5581

[tool.setuptools_scm]
