cmake_minimum_required (VERSION 2.8)
project(LIBGIBBS)
IF(NOT CMAKE_BUILD_TYPE)
  #SET(CMAKE_BUILD_TYPE "DEBUG")
  SET(CMAKE_BUILD_TYPE "RELEASE")
  #SET(CMAKE_BUILD_TYPE "RELWITHDEBINFO")
  #SET(CMAKE_BUILD_TYPE "MINSIZEREL")
ENDIF()

if (NOT DEFINED TDBREAD_SOURCE_DIR)
  set (TDBREAD_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../)
endif (NOT DEFINED TDBREAD_SOURCE_DIR)
set(CMAKE_MODULE_PATH ${TDBREAD_SOURCE_DIR}/cmake)
include(PCHSupport)

UNSET(Boost_LIBRARIES)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON) 
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost COMPONENTS timer chrono log log_setup thread filesystem system python REQUIRED)
if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
endif()

# Handle ipopt
set(IPOPT_HEADERS_DIR ${TDBREAD_SOURCE_DIR}/external/coin)
set(IPOPT_LIB_DIR ${TDBREAD_SOURCE_DIR}/lib)

if(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
endif()


# Find ALL the source and header files
include_directories(${CMAKE_SOURCE_DIR})
FILE(GLOB_RECURSE libgibbs_SRCS ./ *.cpp *.hpp)
FIX_PRECOMPILED_HEADER(libgibbs_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/source/libgibbs_pch.cpp)
add_library(libgibbs STATIC ${libgibbs_SRCS})
target_link_libraries(libgibbs ${Boost_LIBRARIES})
target_link_libraries(libgibbs libtdb)
if (CMAKE_COMPILER_IS_GNUCXX)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/libipopt.a)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/libcoinmumps.a)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/libcoinlapack.a)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/libcoinblas.a)
target_link_libraries(libgibbs pthread gfortran)
endif(CMAKE_COMPILER_IS_GNUCXX)
if (MSVC)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/IpOpt-vc10.lib)
endif(MSVC)
add_precompiled_header(libgibbs ${CMAKE_CURRENT_SOURCE_DIR}/include/libgibbs_pch.hpp ${CMAKE_CURRENT_SOURCE_DIR}/source/libgibbs_pch.cpp)

# Add a target for the corresponding Python library
find_package(PythonLibs 2.7 REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
add_library(pygibbs SHARED ${CMAKE_CURRENT_SOURCE_DIR}/source/pygibbs.cxx)
target_link_libraries(pygibbs libgibbs ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
# Link ipopt dependencies (could probably do this with a shared lib instead)
if (CMAKE_COMPILER_IS_GNUCXX)
target_link_libraries(pygibbs pthread gfortran)
endif(CMAKE_COMPILER_IS_GNUCXX)
