cmake_minimum_required (VERSION 2.8)
project(LIBGIBBS)
IF(NOT CMAKE_BUILD_TYPE)
  #SET(CMAKE_BUILD_TYPE "DEBUG")
  #SET(CMAKE_BUILD_TYPE "RELEASE")
  SET(CMAKE_BUILD_TYPE "RELWITHDEBINFO")
  #SET(CMAKE_BUILD_TYPE "MINSIZEREL")
ENDIF()

if (NOT DEFINED TDBREAD_SOURCE_DIR)
  set (TDBREAD_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../)
endif (NOT DEFINED TDBREAD_SOURCE_DIR)
set(CMAKE_MODULE_PATH ${TDBREAD_SOURCE_DIR}/cmake)
include(PCHSupport)

UNSET(Boost_LIBRARIES)
ADD_DEFINITIONS(-DBOOST_ALL_DYN_LINK)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON) 
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost COMPONENTS timer chrono log log_setup thread filesystem system python REQUIRED)
if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
endif()

# Handle ipopt
set(IPOPT_HEADERS_DIR ${TDBREAD_SOURCE_DIR}/external/coin)
set(IPOPT_LIB_DIR ${TDBREAD_SOURCE_DIR}/lib)

if(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
endif()


# Find ALL the source and header files
include_directories(${CMAKE_SOURCE_DIR})
FILE(GLOB_RECURSE libgibbs_SRCS ./ *.cpp *.hpp)
FIX_PRECOMPILED_HEADER(libgibbs_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/source/libgibbs_pch.cpp)
add_library(libgibbs SHARED ${libgibbs_SRCS})
target_link_libraries(libgibbs ${Boost_LIBRARIES})
target_link_libraries(libgibbs libtdb)
if (CMAKE_COMPILER_IS_GNUCXX)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/libipopt.so)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/libmumps_common.so)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/liblapack.so)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/libblas.so)
target_link_libraries(libgibbs pthread gfortran)
endif(CMAKE_COMPILER_IS_GNUCXX)
if (MSVC)
target_link_libraries(libgibbs ${IPOPT_LIB_DIR}/IpOpt-vc10.lib)
endif(MSVC)
#add_precompiled_header(libgibbs ${CMAKE_CURRENT_SOURCE_DIR}/include/libgibbs_pch.hpp ${CMAKE_CURRENT_SOURCE_DIR}/source/libgibbs_pch.cpp)

# Build and link our internal Qhull library (not exactly ideal but necessary for now, given API instability)
include_directories(${TDBREAD_SOURCE_DIR}/external)
FILE(GLOB_RECURSE myqhullcpp_SRCS ${TDBREAD_SOURCE_DIR}/external/libqhullcpp/*.cpp ${TDBREAD_SOURCE_DIR}/external/libqhull/*.c)
add_definitions("-Dqh_QHpointer")
add_library(myqhullcpp SHARED ${myqhullcpp_SRCS} ${mylibqhull_SRCS})
target_link_libraries(libgibbs myqhullcpp)

# Add a target for the corresponding Python library
find_package(PythonLibs 2.7 REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
add_library(pygibbs SHARED ${CMAKE_CURRENT_SOURCE_DIR}/source/pygibbs.cxx)
target_link_libraries(pygibbs libgibbs ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})
IF(WIN32)
set_target_properties(pygibbs PROPERTIES SUFFIX .pyd)
ENDIF(WIN32)
# Link ipopt dependencies (could probably do this with a shared lib instead)
if (CMAKE_COMPILER_IS_GNUCXX)
target_link_libraries(pygibbs pthread gfortran)
endif(CMAKE_COMPILER_IS_GNUCXX)
