cmake_minimum_required (VERSION 2.8)
project(LIBTDB)
IF(NOT CMAKE_BUILD_TYPE)
  #SET(CMAKE_BUILD_TYPE "DEBUG")
  SET(CMAKE_BUILD_TYPE "RELEASE")
  #SET(CMAKE_BUILD_TYPE "RELWITHDEBINFO")
  #SET(CMAKE_BUILD_TYPE "MINSIZEREL")
ENDIF()

if (NOT DEFINED TDBREAD_SOURCE_DIR)
  set (TDBREAD_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../)
endif (NOT DEFINED TDBREAD_SOURCE_DIR)
set(CMAKE_MODULE_PATH ${TDBREAD_SOURCE_DIR}/cmake)
include(PCHSupport)

UNSET(Boost_LIBRARIES)
set(Boost_USE_STATIC_LIBS ON)
set(Boost_USE_MULTITHREADED ON) 
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost COMPONENTS log log_setup thread filesystem system python REQUIRED)
if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
endif()

if(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
endif()

# Find ALL the source and header files
include_directories(${CMAKE_SOURCE_DIR})
FILE(GLOB_RECURSE libtdb_SRCS ./ *.cpp *.hpp)
FIX_PRECOMPILED_HEADER(libtdb_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/source/libtdb_pch.cpp)
add_library(libtdb STATIC ${libtdb_SRCS})
target_link_libraries(libtdb ${Boost_LIBRARIES})
add_precompiled_header(libtdb "${CMAKE_CURRENT_SOURCE_DIR}/include/libtdb_pch.hpp" "${CMAKE_CURRENT_SOURCE_DIR}/source/libtdb_pch.cpp")

# Add a target for the corresponding Python library
find_package(PythonLibs 2.7 REQUIRED)
include_directories(${PYTHON_INCLUDE_DIRS})
add_library(pytdb SHARED ${CMAKE_CURRENT_SOURCE_DIR}/source/python_ext.cxx)
#SET_TARGET_PROPERTIES(pytdb PROPERTIES IMPORT_SUFFIX ".pyd" IMPORT_PREFIX "" PREFIX "")
target_link_libraries(pytdb libtdb ${Boost_LIBRARIES} ${PYTHON_LIBRARIES})

# Link ipopt to satisfy dependencies
set(IPOPT_HEADERS_DIR ${TDBREAD_SOURCE_DIR}/external/coin)
set(IPOPT_LIB_DIR ${TDBREAD_SOURCE_DIR}/lib)
if (CMAKE_COMPILER_IS_GNUCXX)
target_link_libraries(pytdb ${IPOPT_LIB_DIR}/libipopt.a)
target_link_libraries(pytdb ${IPOPT_LIB_DIR}/libcoinmumps.a)
target_link_libraries(pytdb ${IPOPT_LIB_DIR}/libcoinlapack.a)
target_link_libraries(pytdb ${IPOPT_LIB_DIR}/libcoinblas.a)
set_target_properties(pytdb PROPERTIES LINK_FLAGS "-lpthread -lgfortran")
endif(CMAKE_COMPILER_IS_GNUCXX)
if (MSVC)
target_link_libraries(pytdb ${IPOPT_LIB_DIR}/IpOpt-vc10.lib)
endif(MSVC)