cmake_minimum_required (VERSION 2.8)
project(UNITTEST)

if (NOT DEFINED TDBREAD_SOURCE_DIR)
  set (TDBREAD_SOURCE_DIR ${CMAKE_SOURCE_DIR}/../)
endif (NOT DEFINED TDBREAD_SOURCE_DIR)
set(CMAKE_MODULE_PATH ${TDBREAD_SOURCE_DIR}/cmake)
include(PCHSupport)

UNSET(Boost_LIBRARIES)
set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON) 
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost REQUIRED COMPONENTS unit_test_framework)
if(Boost_FOUND)
   include_directories(${Boost_INCLUDE_DIRS})
endif()

if(CMAKE_COMPILER_IS_GNUCXX)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
endif()

# Find ALL the source and header files
include_directories(${CMAKE_SOURCE_DIR})
FILE(GLOB_RECURSE unittest_HFILES include/*.hpp)
FILE(GLOB_RECURSE unittest_SRCS source/*.cpp)
FIX_PRECOMPILED_HEADER(unittest_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/source/test_pch.cpp)
add_executable(unittest ${unittest_SRCS} ${unittest_HFILES})
add_precompiled_header(unittest ${CMAKE_CURRENT_SOURCE_DIR}/include/test_pch.hpp ${CMAKE_CURRENT_SOURCE_DIR}/source/test_pch.cpp)
target_link_libraries(unittest libtdb)
target_link_libraries(unittest ${Boost_LIBRARIES})
if (MSVC)
# I am not pleased with this hack
target_link_libraries(unittest ${CMAKE_CURRENT_BINARY_DIR}/unittest_pch/test_pch.pch.obj)
endif (MSVC)